outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-7939965609421600183_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric that combines local proximity, connectivity, and destination alignment, while using a probabilistic selection mechanism to balance exploration and exploitation, with the exploration factor now being a function of both remaining nodes and proximity to the destination.}
                                                                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric that combines local proximity, connectivity, and destination alignment, while using a probabilistic selection mechanism to balance exploration and exploitation, with the exploration factor now being a function of both remaining nodes and proximity to the destination.}
                                                                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'
